test: update existing tests and add base integration setup